# kotel

./: CMakeLists.txt  COPYING  README.md  fixup.sh  forces-2d-x86-32.nexe  forces-2d-x86-64.nexe  forces-2d.nmf  forces-3d-x86-32.nexe  forces-3d-x86-64.nexe  forces-3d.html  forces-3d.nmf  prototypes.css
doc/: game-design.md
prototypes/: CMakeLists.txt  forces-2d-emscripten.html  forces-2d-nacl.html  forces-2d.cpp  forces-2d.html  forces-3d-emscripten.html  forces-3d-nacl.html  forces-3d.cpp  prototypes.js
src/: CMakeLists.txt  Kotel.h
